--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -196,6 +196,7 @@
       <a href="https://wa.me/1234567890" class="text-white me-3" target="_blank"><i class="fab fa-whatsapp fa-lg"></i></a>
       <a href="mailto:correo@ejemplo.com" class="text-white" target="_blank"><i class="fas fa-envelope fa-lg"></i></a>
     </div>
+    <a href="/admin" class="btn btn-secondary mt-3">Ver contactos</a>
     <p>&copy; 2025 Service Tecno. Todos los derechos reservados.</p>
   </footer>
 
