--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -156,7 +156,7 @@
       </div>
 
       <div class="text-center">
-        <button type="submit" class="btn btn-success">Pagar</button>
+        <button id="pay-btn" type="submit" class="btn btn-success">Pagar</button>
       </div>
     </form>
   </div>
@@ -177,7 +177,7 @@
       <h2 class="text-center mb-4">Contáctanos</h2>
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <form action="/contact/add" method="POST">
+          <form id="contact-form" action="/contact/add" method="POST">
             <div class="mb-3">
               <label class="form-label">Nombre</label>
               <input type="text" name="name" class="form-control" placeholder="Tu nombre" required>
@@ -210,5 +210,22 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.getElementById('contact-form')?.addEventListener('submit', function () {
+    gtag('event', 'submit_contact_form', {
+      event_category: 'Formulario',
+      event_label: 'Formulario de contacto'
+    });
+  });
+  </script>
+
+  <script>
+    document.getElementById('paymentForm')?.addEventListener('submit', function () {
+      gtag('event', 'submit_payment_form', {
+        event_category: 'Formulario',
+        event_label: 'Formulario de pago'
+      });
+    });
+  </script>
 </body>
 </html>
