--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -58,6 +58,15 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand" href="#"><i class="fas fa-tools"></i> Service Tecno</a>
+      <div class="ms-auto">
+        <% if (typeof userId !== 'undefined') { %>
+          <a href="/dashboard" class="btn btn-outline-light me-2">Panel</a>
+          <a href="/logout" class="btn btn-danger">Cerrar sesión</a>
+        <% } else { %>
+          <a href="/login" class="btn btn-outline-light me-2">Iniciar sesión</a>
+          <a href="/register" class="btn btn-success">Registrarse</a>
+        <% } %>
+      </div>
     </div>
   </nav>
 
