--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -53,6 +53,11 @@
   </style>
 </head>
 <body>
+  <% if (loginSuccess) { %>
+    <script>
+      alert('¡Has iniciado sesión exitosamente!');
+    </script>
+  <% } %>
 
   <!-- Navbar principal -->
   <nav class="navbar navbar-expand-lg navbar-dark">
