--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -20,6 +20,12 @@
       <div class="mt-3 text-center">
         <a href="/register">¿No tienes cuenta? Regístrate</a>
       </div>
+      <hr>
+      <div class="text-center">
+        <a href="/auth/google" class="btn btn-danger w-100">
+          <i class="fab fa-google"></i> Iniciar sesión con Google
+        </a>
+      </div>
     </div>
   </div>
 </div>
