--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -6,11 +6,61 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
-  <h1 class="mb-4"><%= t('admin_panel') %></h1>
-  <div class="list-group">
-    <a href="/contacts" class="list-group-item list-group-item-action"><%= t('contacts') %></a>
-    <a href="/payments" class="list-group-item list-group-item-action"><%= t('payments') %></a>
+  <%- include('partials/header') %>
+
+  <div class="container mt-5">
+    <h1 class="mb-4"><%= t('dashboard_title') %></h1>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card text-center mb-4">
+          <div class="card-body">
+            <h5 class="card-title"><%= t('total_payments') %></h5>
+            <p class="card-text"><%= totalPayments %></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-center mb-4">
+          <div class="card-body">
+            <h5 class="card-title"><%= t('total_clients') %></h5>
+            <p class="card-text"><%= totalClients %></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-center mb-4">
+          <div class="card-body">
+            <h5 class="card-title"><%= t('pending_services') %></h5>
+            <p class="card-text"><%= pendingServices %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="mt-5 mb-3"><%= t('recent_payments') %></h2>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col"><%= t('client') %></th>
+          <th scope="col"><%= t('service') %></th>
+          <th scope="col"><%= t('amount') %></th>
+          <th scope="col"><%= t('date') %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% payments.forEach(function(payment) { %>
+          <tr>
+            <td><%= payment.client %></td>
+            <td><%= payment.service %></td>
+            <td><%= payment.amount %> <%= payment.currency %></td>
+            <td><%= payment.date %></td>
+          </tr>
+        <% }) %>
+      </tbody>
+    </table>
   </div>
+
   <a href="/logout" class="btn btn-secondary mt-4"><%= t('logout') %></a>
+  <%- include('partials/footer') %>
 </body>
 </html>
